# vyatta-zone

./: .frlog  .gitignore  Makefile.am  README  configure.ac
debian/: README  changelog  control  copyright  lintian  rules
lib/Vyatta/: Zone.pm
scripts/: vyatta-show-zone.pl  vyatta-zone-ips.pl  vyatta-zone.pl
templates-cfg/zone-policy/: node.def
templates-cfg/zone-policy/zone/: node.def
templates-cfg/zone-policy/zone/node.tag/from/: node.def
templates-cfg/zone-policy/zone/node.tag/from/node.tag/content-inspection/: node.def
templates-cfg/zone-policy/zone/node.tag/from/node.tag/content-inspection/.ipv6-enable/: node.def
templates-cfg/zone-policy/zone/node.tag/from/node.tag/content-inspection/enable/: node.def
templates-cfg/zone-policy/zone/node.tag/interface/: node.def
templates-cfg/zone-policy/zone/node.tag/local-zone/: node.def
templates-op/show/zone-policy/: node.def
templates-op/show/zone-policy/zone/: node.def
templates-op/show/zone-policy/zone/node.tag/: node.def
